# dbot_webapp

./: .gitignore  README.md  pyproject.toml
core/: urls.py
core/templates/core/: index.html
main/: settings.py  urls.py
